--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -448,4 +448,11 @@
     padding: 12px;
     overflow-y: auto;
   }
+  .voteemailsend {
+    background: green !important;
+    width: 180px !important;
+    padding: 4px !important;
+    font-size: 85% !important;
+    border: 2px solid black !important;
+  }
 }
