--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/topbar" %>
 
 <div id="newgamepage">
-  <!-- <%= form_for(@game) do |f| %>
+   <%= form_for(@game) do |f| %>
 
     <%= f.hidden_field :length, :value => "1hour" %>
     <%= f.hidden_field :group_id, :value => 0 %>
@@ -12,7 +12,7 @@
     </div>
     (4 rounds: 1 hour to play, 2 hours to vote)
   <% end %>
-  -->
+
 
   <br><br>
   <%= form_for(@game) do |g| %>
