--- a/app/views/games/_roundresultsshort.html.erb
+++ b/app/views/games/_roundresultsshort.html.erb
@@ -46,6 +46,7 @@
       <%= image_tag User.where(:id => @round1winner.id).first.avatar.url(:small), :style => "border: 1px solid gray; margin-bottom:12px;" %><br>
       Round 1 Winner: <span class="gamewinnerstats"><%= User.where(:id => @round1winner.id).first.username %></span> with <span class="gamewinnerstats"><%= Gamedata.where(:game_id => @game.id).order('r1points DESC').first.r1points %></span> points!
     </div>
+    Category: <span style="color:red; font-style: italic;"><%= @game.r1cat %></span>
     <table class="roundresultstable">
       <thead>
         <tr>
@@ -101,6 +102,7 @@
       <%= image_tag User.where(:id => @round2winner.id).first.avatar.url(:small), :style => "border: 1px solid gray; margin-bottom:12px;" %><br>
       Round 2 Winner: <span class="gamewinnerstats"><%= User.where(:id => @round2winner.id).first.username %></span> with <span class="gamewinnerstats"><%= Gamedata.where(:game_id => @game.id).order('r2points DESC').first.r2points %></span> points!
     </div>
+    Category: <span style="color:red; font-style: italic;"><%= @game.r2cat %></span>
     <table class="roundresultstable">
       <thead>
         <tr>
@@ -156,6 +158,7 @@
       <%= image_tag User.where(:id => @round3winner.id).first.avatar.url(:small), :style => "border: 1px solid gray; margin-bottom:12px;" %><br>
       Round 3 Winner: <span class="gamewinnerstats"><%= User.where(:id => @round3winner.id).first.username %></span> with <span class="gamewinnerstats"><%= Gamedata.where(:game_id => @game.id).order('r3points DESC').first.r3points %></span> points!
     </div>
+    Category: <span style="color:red; font-style: italic;"><%= @game.r3cat %></span>
     <table class="roundresultstable">
       <thead>
         <tr>
@@ -211,6 +214,7 @@
       <%= image_tag User.where(:id => @round4winner.id).first.avatar.url(:small), :style => "border: 1px solid gray; margin-bottom:12px;" %><br>
       Round 4 Winner: <span class="gamewinnerstats"><%= User.where(:id => @round4winner.id).first.username %></span> with <span class="gamewinnerstats"><%= Gamedata.where(:game_id => @game.id).order('r4points DESC').first.r4points %></span> points!
     </div>
+    Category: <span style="color:red; font-style: italic;"><%= @game.r4cat %></span>
     <table class="roundresultstable">
       <thead>
         <tr>
