new ranking system

--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -450,7 +450,7 @@
   #mainvotinggameslist, #mainresultsgameslist {
     display:none;
   }
-  #lifetimerankings {
+  .lifetimerankings {
     width: 300px;
     height: 300px;
     margin: 0 auto;
