--- a/app/views/pages/rankings.html.erb
+++ b/app/views/pages/rankings.html.erb
@@ -1,10 +1,17 @@
 <% @mainpagetitle="Player Ratings" %>
 <%= render "shared/topbar" %>
 
-<div id="lifetimerankings">
+<div class="lifetimerankings">
+  <div style="margin-bottom: 6px; text-align: center;">Rankings - Top 30 Players<br><span style="font-size: 86%"><u>(Average Points/Round x 1000)</u></span></div>
+  <% User.all.sort {|a,b| a.averagepointsperround <=> b.averagepointsperround}.reverse!.first(30).each do |user| %>
+    <li style="list-style-type: decimal;"><%= user.username %> <span style="float:right"><%= user.averagepointsperround %></span></li>
+  <% end %>
+</div>
+<br>
+<div class="lifetimerankings">
   <div style="margin-bottom: 6px; text-align: center;"><u>Lifetime Point Leaders</u></div>
   <% User.order('lifetimepoints DESC').each do |user| %>
-      <li style="list-style-type: decimal;"><%= user.username %> with <%= user.lifetimepoints %> points</li>
+    <li style="list-style-type: decimal;"><%= user.username %> with <%= user.lifetimepoints %> points</li>
   <% end %>
 </div>
 
