--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -346,6 +346,12 @@
   .votebuttons {
     float: left;
   }
+  .roundhasvote {
+    background-color: green;
+    background-image: url("Check-48.png");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
   #resultsround {
     width: 60%;
     margin: 0 auto;
