--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -500,12 +500,20 @@
 
 </div>
 <div class="chatbutton">
-  <%= link_to(gamechat_games_path(@game)) do %>
-    <div class="gamechat button">
-      <span><%= image_tag("emoji/smiley.png", :class => "smallspeechimage") + 'Game chat' + image_tag("emoji/speech_balloon.png", :class => "smallspeechimage") %></span><br>
+      <% if Gamedata.where(:game_id => @game.id).where(:user_id => current_user.id).first.whochatted != "" %>
+        <%= link_to(gamechat_games_path(@game)) do %>
+          <div class="gamechat button">
+            <span class="chatlinknotify"><%= Gamedata.where(:game_id => @game.id).where(:user_id => current_user.id).first.whochatted + ' is chatting!' %> <%= image_tag("emoji/speech_balloon.png", :class => "smallspeechimage") %></span><br>
+          </div>
+        <% end %>
+      <% else %>
+        <%= link_to(gamechat_games_path(@game)) do %>
+          <div class="gamechat button">
+            <span class="chatlink">Game chat</span><br>
+          </div>
+        <% end %>
+      <% end %>
     </div>
-  <% end %>
-</div>
 <script>
   function seenResults(){
     $.ajax({
