--- a/app/assets/stylesheets/universal.css.scss
+++ b/app/assets/stylesheets/universal.css.scss
@@ -56,6 +56,7 @@ button, .button {
   padding-right: 15px;
   padding-bottom: 8px;
   padding-left: 15px;
+  border-radius: 4px;
   font-size: 94%;
   /*     @else                            { font-size: $padding - rem-calc(2); } */
   background-color: #008cba;
